python/rregadmin/hive/value_list_cell_wrapper.py

# generated by 'xml2py'
# flags '-c -d -v -k defst -lrregadmin -m rregadmin.util.glib_wrapper -m rregadmin.util.icu_wrapper -m rregadmin.util.path_wrapper -m rregadmin.util.icu_wrapper -m rregadmin.util.path_info_wrapper -m rregadmin.util.ustring_wrapper -m rregadmin.util.offset_wrapper -m rregadmin.util.value_wrapper -m rregadmin.util.ustring_list_wrapper -m rregadmin.hive.types_wrapper -r ^value_list_cell_.* -o value_list_cell_wrapper.py value_list_cell_wrapper.xml'
from ctypes import *

from rregadmin.hive.types_wrapper import ValueListCell
from rregadmin.hive.types_wrapper import Hive
from rregadmin.util.offset_wrapper import offset
_libraries = {}
_libraries['librregadmin.so.1'] = CDLL('librregadmin.so.1')
from rregadmin.util.ustring_list_wrapper import gboolean
from rregadmin.hive.types_wrapper import Cell
from rregadmin.hive.types_wrapper import ValueKeyCell
from rregadmin.hive.types_wrapper import guint32


# ../../../rregadmin/hive/value_list_cell.h 49
value_list_cell_alloc = _libraries['librregadmin.so.1'].value_list_cell_alloc
value_list_cell_alloc.restype = POINTER(ValueListCell)
# value_list_cell_alloc(hdesc, nk, no)
value_list_cell_alloc.argtypes = [POINTER(Hive), offset, c_int]
value_list_cell_alloc.__doc__ = \
"""ValueListCell * value_list_cell_alloc(Hive * hdesc, offset nk, int no)
../../../rregadmin/hive/value_list_cell.h:49"""
# ../../../rregadmin/hive/value_list_cell.h 56
value_list_cell_unalloc = _libraries['librregadmin.so.1'].value_list_cell_unalloc
value_list_cell_unalloc.restype = gboolean
# value_list_cell_unalloc(vlc, num_items, in_recursive)
value_list_cell_unalloc.argtypes = [POINTER(ValueListCell), c_int, gboolean]
value_list_cell_unalloc.__doc__ = \
"""gboolean value_list_cell_unalloc(ValueListCell * vlc, int num_items, gboolean in_recursive)
../../../rregadmin/hive/value_list_cell.h:56"""
# ../../../rregadmin/hive/value_list_cell.h 62
value_list_cell_from_cell = _libraries['librregadmin.so.1'].value_list_cell_from_cell
value_list_cell_from_cell.restype = POINTER(ValueListCell)
# value_list_cell_from_cell(ptr)
value_list_cell_from_cell.argtypes = [POINTER(Cell)]
value_list_cell_from_cell.__doc__ = \
"""ValueListCell * value_list_cell_from_cell(Cell * ptr)
../../../rregadmin/hive/value_list_cell.h:62"""
# ../../../rregadmin/hive/value_list_cell.h 68
value_list_cell_to_cell = _libraries['librregadmin.so.1'].value_list_cell_to_cell
value_list_cell_to_cell.restype = POINTER(Cell)
# value_list_cell_to_cell(vlc)
value_list_cell_to_cell.argtypes = [POINTER(ValueListCell)]
value_list_cell_to_cell.__doc__ = \
"""Cell * value_list_cell_to_cell(ValueListCell * vlc)
../../../rregadmin/hive/value_list_cell.h:68"""
# ../../../rregadmin/hive/value_list_cell.h 75
value_list_cell_get_entry = _libraries['librregadmin.so.1'].value_list_cell_get_entry
value_list_cell_get_entry.restype = POINTER(ValueKeyCell)
# value_list_cell_get_entry(vlc, val_no, num_items)
value_list_cell_get_entry.argtypes = [POINTER(ValueListCell), guint32, c_int]
value_list_cell_get_entry.__doc__ = \
"""ValueKeyCell * value_list_cell_get_entry(ValueListCell * vlc, guint32 val_no, int num_items)
../../../rregadmin/hive/value_list_cell.h:75"""
# ../../../rregadmin/hive/value_list_cell.h 82
value_list_cell_remove = _libraries['librregadmin.so.1'].value_list_cell_remove
value_list_cell_remove.restype = gboolean
# value_list_cell_remove(vlc, val_no, num_items)
value_list_cell_remove.argtypes = [POINTER(ValueListCell), guint32, c_int]
value_list_cell_remove.__doc__ = \
"""gboolean value_list_cell_remove(ValueListCell * vlc, guint32 val_no, int num_items)
../../../rregadmin/hive/value_list_cell.h:82"""
# ../../../rregadmin/hive/value_list_cell.h 89
value_list_cell_add = _libraries['librregadmin.so.1'].value_list_cell_add
value_list_cell_add.restype = gboolean
# value_list_cell_add(vlc, in_ofs, num_items)
value_list_cell_add.argtypes = [POINTER(ValueListCell), offset, c_int]
value_list_cell_add.__doc__ = \
"""gboolean value_list_cell_add(ValueListCell * vlc, offset in_ofs, int num_items)
../../../rregadmin/hive/value_list_cell.h:89"""
# ../../../rregadmin/hive/value_list_cell.h 97
value_list_cell_debug_print = _libraries['librregadmin.so.1'].value_list_cell_debug_print
value_list_cell_debug_print.restype = None
# value_list_cell_debug_print(vl, no)
value_list_cell_debug_print.argtypes = [POINTER(ValueListCell), c_int]
value_list_cell_debug_print.__doc__ = \
"""void value_list_cell_debug_print(ValueListCell * vl, int no)
../../../rregadmin/hive/value_list_cell.h:97"""
__all__ = ['value_list_cell_debug_print', 'value_list_cell_remove',
           'value_list_cell_unalloc', 'value_list_cell_to_cell',
           'value_list_cell_get_entry', 'value_list_cell_alloc',
           'value_list_cell_add', 'value_list_cell_from_cell']
